plugins/formal-verification/testData/diagnostics/no_contracts/boolean_logic.kt
fun <!VIPER_TEXT!>negation<!>(x: Boolean) {
    val y = !x
}
